tests/analyzer/errors/already_declared.ray
struct Name {}
struct Name {}

struct DoubleField {
    score: int,
    score: int,
}

fn main() {
    {
        var loc1 = "local"
        var loc1 = " var"
    }
}
